<resources>
    <string name="app_name">NMedia</string>
    <string name="text">NMedia!</string>
    <string name="avatar">avatar</string>
    <string name="menu">menu</string>
    <string name="favourite">favourite</string>
    <string name="share">share</string>
    <string name="view">view</string>
    <string name="liked">liked</string>
    <string name="viewed">viewed</string>
    <string name="menuRemove">Remove</string>
    <string name="toastSaveMessage">Content empty</string>
    <string name="editViewHintMessage">Add content</string>
    <string name="menuEdit">Edit</string>
    <string name="headerOldContent">Edit message</string>
    <string name="emotionsImage">emotionsImage</string>
    <string name="createImage">createImage</string>
    <string name="cancelButton">cancelButton</string>
    <string name="savebutton">saveButton</string>
    <string name="likeCheckBoxDescription" translatable="false">Like</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="error_empty_content" translatable="false">Empty content</string>
</resources>